--- a/devII/src/app/app.component.html
+++ b/devII/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="wrapper">
+<div>
   <app-header />
-  <div class="corpo">
+<div>
     <!-- <app-solicitacao-servidor/> para testar se a lista está ok-->
 
     <router-outlet></router-outlet>
