--- a/devII/src/app/core/components/footer/footer.component.html
+++ b/devII/src/app/core/components/footer/footer.component.html
@@ -1,18 +1,12 @@
 <div class="footer">
   <div class="footer-logo">
-    <img src="./assets/img/logo-ifrs.svg" />
+    <img class="logo-ifrs-footer" src="./assets/img/logo-ifrs.svg"  />
   </div>
   <div class="footer-infos">
     <div class="geral">
       <p class="nome-campus">Instituto Federal do Rio Grande do Sul – Campus Restinga</p>
       <p class="endereco">Rua Alberto Hoffmann, 285 Restinga - Porto Alegre / RS</p>
       <p class="cep">CEP: 91791-508 - Fone: (51) 3247.8400</p>
-    </div>
-    <div class="redes">
-      <img  src="./assets/img/icon-youtube.svg" />
-      <img  src="./assets/img/icon-twitter.svg" />
-      <img  src="./assets/img/icon-instagram .svg" />
-      <img  src="./assets/img/icon-facebook.svg" />
     </div>
   </div>
   <div class="footer-mec">
