--- a/devII/src/app/modules/aluno/solicitacoes-aluno/detalhes-solicitacao/detalhes-solicitacao.component.scss
+++ b/devII/src/app/modules/aluno/solicitacoes-aluno/detalhes-solicitacao/detalhes-solicitacao.component.scss
@@ -47,6 +47,10 @@
 .statusColor3{
   background-color: #CB0606;
 }
+.statusColor5{
+  background-color: #ffcc23;
+
+}
 
 .fluxo{
   display: flex;
@@ -139,8 +143,8 @@ button{
 
 .observacao{
   margin: 30px 50px;
-  font-size: 23px;
-  width: 90%;
+  font-size: 1.1em;
+
   padding: 10px;
   color: black;
 }
