--- a/devII/src/app/modules/aluno/solicitacoes-aluno/lista-solicitacoes-aluno/lista-solicitacoes-aluno.component.scss
+++ b/devII/src/app/modules/aluno/solicitacoes-aluno/lista-solicitacoes-aluno/lista-solicitacoes-aluno.component.scss
@@ -45,7 +45,7 @@
 button{
   padding-left: 2%;
   padding-right: 2%;
-  background: #2B923C;
+  background: #2B923C !important;
   font-style: normal;
   font-size: 20px;
   color: #FFFFFF;
