--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/lista-solicitacoes-servidor/lista-solicitacoes-servidor.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/lista-solicitacoes-servidor/lista-solicitacoes-servidor.component.scss
@@ -128,12 +128,13 @@ active{
   padding: 0.375rem 0.75rem;
   font-size: 0.9375rem;
   line-height: 1.5;
-  color: #6a737b;
+  color: #003b6e;
+  font-weight: 500;
 }
 
 .filtro-status:hover {
-  color: #ffffff;
-  background-color: #6a737b;
+
+  background-color: #e7ffeb;
 }
 
 .filtro-button {
