--- a/devII/src/styles.scss
+++ b/devII/src/styles.scss
@@ -13,7 +13,7 @@ body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.ttAviso {
-  font-size: 3em;
-  color: red;
+.btVerde {
+  background-color: green !important;
+  color: white !important;
 }
