--- a/devII/src/app/core/components/header/header.component.scss
+++ b/devII/src/app/core/components/header/header.component.scss
@@ -1,7 +1,3 @@
-
-
-
-
 .logo
 {
   width: 300px;
@@ -13,7 +9,8 @@ img{
   background-color: #0b6b1d;
   display: flex;
   align-items: center;
-  height: 109px;
+  height: 6.5em;
+  box-shadow: 0px 0px 20px 0px rgb(0 0 0 / 61%);
 
   &-inicio {
     width: 50%;
@@ -25,7 +22,7 @@ img{
       text-decoration: none;
       margin-top: 4%;
       .titulo {
-        margin-left: 25px;
+        margin-left: 1em;
         margin-top: 19px;
         color: #ffff;
         font-size: 12px;
@@ -57,14 +54,16 @@ img{
 
       > a {
         text-decoration: none;
-        margin-left: 25px;
+        margin-left: 1em;
+        padding: 5px 10px;
         color: #ffff;
-        font-size: 16px;
-        font-weight: bold;
+        font-size: 1.2em;
+        font-weight: 500;
 
         &:hover {
           cursor: pointer;
-          font-size: larger;
+          background-color: #0d8122;
+          border-radius: 25px;
         }
       }
     }
@@ -72,24 +71,36 @@ img{
 
   .div-ativa{
     border-bottom: 3px solid #ffff;
+    &:hover {
+      cursor: pointer;
+      background-color: #ffffff00;
+      border-radius: 0px;
+    }
   }
 
 
   @media screen and (max-width: 1120px) {
+    .bemVindo{
+      display: none;
+    }
     &-inicio {
-      padding-left: 30px;
+      width: 25%;
+      display: flex;
       align-items: center;
-
+      padding-left: 50px;
       img {
-        width: 50px;
+        width: 0px;
+      }
+      .logo{
+        display: none;
       }
 
       &-link {
         text-decoration: none;
-
+        width: 100%;
         .titulo {
           line-height: 10px;
-          margin-top: 25px;
+          margin-left: 1em;
           color: #ffff;
           font-size: 10px;
           font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
@@ -107,6 +118,7 @@ img{
       }
     }
     &-itens {
+      width: 75%;
       &-menu {
         .oportunidade,
         .enviarDocs,
@@ -115,14 +127,24 @@ img{
           font-size: 15px;
         }
       }
+      a {
+        text-decoration: none;
+        margin-left: 1em;
+        padding: 5px 10px;
+        color: #ffff;
+        font-size: 0.9em;
+        &:hover {
+          cursor: pointer;
+        }
+      }
     }
   }
 }
 
 .bemVindo {
   line-height: 10px;
-  left: 80%;
-  top: 4%;
+  left: 85%;
+  top: 1%;
   width: 15%;
   display: flex;
   position: absolute;
