--- a/devII/src/app/modules/aluno/solicitacoes-aluno/solicitacao/solicitacao.component.html
+++ b/devII/src/app/modules/aluno/solicitacoes-aluno/solicitacao/solicitacao.component.html
@@ -1,14 +1,15 @@
 <div class="espacamento">
   <div class="card">
    <div class="header">
-      <span class="tituloEstagio" >Estágio {{solicitacao.tipo}} </span> 
-      <div *ngIf="observacaoOn" >
-      <p><mat-icon class="iconeObservacao" > feedback</mat-icon>
-      </p>
-    </div>
+      <span class="tituloEstagio" >{{titulo}} </span> 
+        <div *ngIf="observacaoOn && solicitacao.status.toLowerCase() != 'indeferido' " (click)="openDialog(true)" >
+          <button mat-raised-button class="buttonObs">Observação 
+            <mat-icon class="iconeObservacao" >feedback</mat-icon>
+          </button>
+        </div>
       <div>
         <span>Status</span>
-        <span class="retangulo" [ngClass]="statusSolicitacao()">{{solicitacao.status}}</span>
+        <span  matTooltip="Descrição do status:  {{getDescricaoStatus()}}" class="retangulo" [ngClass]="statusSolicitacao()">{{solicitacao.status}}</span>
         <div class="infoStatus">
           <div class="infoStatusCaixa" id="infoStatusCaixa" [ngClass]="statusInfo(1)">
           </div>
@@ -33,16 +34,31 @@
    </div>
 
    <div class="buttonContainer">
-    <div class="buttonDetalhes"  id="buttonDetalhes" *ngIf="solicitacao.status == 'Deferido'">
-      <button (click)="abrirDownload()"> Baixar documentos</button>
+    <div class="buttonDetalhes"  id="buttonDetalhes" *ngIf="solicitacao.status == 'Deferido' && dataPassou(solicitacao) ||  solicitacao.relatorioEntregue && dataPassou(solicitacao) && solicitacao.status != 'Finalizado' && solicitacao.status != 'Cancelado'">
+      <button mat-raised-button class="buttonAzul" color="primary" (click)="abrirEnvioDocumentos('relatorio')"> Enviar relatório final</button>
     </div>
-    <div class="buttonDetalhes"  id="buttonDetalhes" *ngIf="solicitacao.status != 'Deferido'">
-      <button (click)="abrirEdicao()" [ngClass]="statusEditavel"> Editar documentos</button>
+    <div class="buttonDetalhes"  id="buttonDetalhes" *ngIf="solicitacao.status == 'Deferido' && !dataPassou(solicitacao)">
+      <button mat-raised-button class="buttonAzul" color="primary" (click)="abrirEnvioDocumentos('cancelar')"> Cancelar estágio</button>
+    </div>
+    <div class="buttonDetalhes"  id="buttonDetalhes" *ngIf="solicitacao.status == 'Deferido' || solicitacao.status == 'Finalizado' || solicitacao.status == 'Cancelado'">
+      <button mat-raised-button (click)="abrirDownload()"> Baixar documentos</button>
+    </div>
+    <div class="buttonDetalhes" id="buttonDetalhes" *ngIf="solicitacao.status != 'Deferido' && solicitacao.status != 'Finalizado'  && solicitacao.status != 'Cancelado'">
+      <button 
+      mat-raised-button 
+      matTooltip="{{statusEditavel ? 'Edição de docs. desabilitada!' : 'Enquanto a solicitação estiver pendente ou nova, você pode resolver pendências ou editar documentos.'}}" 
+      [matTooltipShowDelay]="500"
+      [matTooltipHideDelay]="500"
+      (click)="abrirEdicao()"
+      [ngClass]="statusEditavel">{{solicitacao.status == "Pendente" ? 'Resolver pendência' : 'Editar documentos'}} </button>
     </div>
     <div class="buttonDetalhes">
-      <button (click)="openDialog()">Detalhes </button>
+      <button 
+      mat-raised-button  
+      matTooltip="Visualize os detalhes de sua solicitação."
+      [matTooltipShowDelay]="500"
+      (click)="openDialog()">Detalhes </button>
     </div>
    </div>
-
   </div>
 </div>
