--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/modal-analise/modal-analise.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/modal-analise/modal-analise.component.scss
@@ -10,8 +10,9 @@
 
   .content {
     p {
-      font-size: 20px;
+      font-size: 1.2em;
       color: black;
+      text-align: center;
     }
     mat-form-field {
       width: 100%;
@@ -24,6 +25,6 @@
   }
   .buttons {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
   }
 }
