--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/solicitacao/solicitacao.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/solicitacao/solicitacao.component.html
@@ -1,8 +1,11 @@
 <div class="espacamento">
-  <div class="card">
+  <div class="card" [ngClass]="solicitacaoStatus()">
     <div class="header">
-      <div class="tituloTipo" *ngIf="solicitacao.tipo === 'bolsa'; else estagio">
-        <span>{{ solicitacao.tipo }}</span>
+      <div
+        class="tituloTipo"
+        *ngIf="solicitacao.tipo === 'bolsa'; else estagio"
+      >
+        <h3>{{ solicitacao.tipo }}</h3>
       </div>
 
       <ng-template #estagio>
@@ -13,26 +16,37 @@
 
       <div>
         <span>Status</span>
-        <span class="retangulo" [ngClass]="statusSolicitacao()">{{ solicitacao.status }}</span>
+        <span class="retangulo" [ngClass]="statusSolicitacao()">{{
+          solicitacao.status
+        }}</span>
       </div>
     </div>
 
     <div class="titulo">
-      <span>Solicitação de: {{ solicitacao.aluno.nomeCompleto}}</span>
+      <span>Aluno: {{ solicitacao.aluno.nomeCompleto }}</span>
       <span class="cardDecoracao2"></span>
     </div>
 
-    <div class="cardConteudo ">
-      <span>Curso: {{ solicitacao.aluno.curso.nomeCurso }}</span>
-      <span>Data da solicitação: {{ solicitacao.dataSolicitacao | date:'dd/MM/yyyy' }}</span>
+    <div class="conteudo">
+      <div class="cardConteudo">
+        <span>Curso: {{ solicitacao.aluno.curso.nomeCurso }}</span>
+        <span
+          >Data da solicitação:
+          {{ solicitacao.dataSolicitacao | date : "dd/MM/yyyy" }}</span
+        >
+        <span class="responsavel">{{ responsavelAtual }}</span>
+      </div>
       <div class="buttonContainer">
-        <span>{{ responsavelAtual}}</span>
         <div class="buttons">
           <div class="buttonDetalhes">
-            <button  (click)="openDialog()">Detalhes</button>
+            <button class="buttonVerde" mat-raised-button (click)="openDialog()">Detalhes</button>
           </div>
           <div class="buttonGerenciar">
-            <button [routerLink]="['/analisedocs', solicitacao.id]">
+            <button
+              class="buttonVerde"
+              mat-raised-button
+              [routerLink]="['/analisedocs', solicitacao.id]"
+            >
               Gerenciar
             </button>
           </div>
