--- a/devII/src/app/perfil/perfil.component.html
+++ b/devII/src/app/perfil/perfil.component.html
@@ -6,7 +6,7 @@
         <form  class="formulario--centro" (ngSubmit)="enviarSolicitacao()">
                 <div class="formularioBox">
                 <label class="nome-campo">Nome Completo</label>
-                <input class="nome" type="text" name="fname" placeholder="Nome Completo"  [(ngModel)]="aluno.nomeCompleto" >
+                <input class="nome" type="text" name="fname" placeholder="Nome Completo"  [(ngModel)]="aluno.nomeCompleto" [maxlength]="45" >
     
                 <label class="nome-campo">Email institucional</label>
                 <input class="email" type="text" name="fname" placeholder="aluno@restinga.ifrs.edu.br" value="{{ aluno.usuarioSistema.email }}" [disabled]="true">
@@ -22,13 +22,9 @@
                 <ul>
                     <li style="padding-right: 39px;">
                         <label for="matricula">Matrícula</label>
-                        <input type="text" id="matricula" name="matricula"  [(ngModel)]="aluno.matricula" placeholder="Matrícula" required>
+                        <input type="text" id="matricula" name="matricula"  [(ngModel)]="aluno.matricula" placeholder="Matrícula" [maxlength]="10" required>
                     </li>
     
-                    <li>
-                        <label for="ingresso">Ingresso</label>
-                        <input type="text" id="ingresso" name="ingresso" [(ngModel)]="aluno.ingresso" placeholder="1/2023" required>
-                    </li>
                 </ul>
     
                 <label for="curso">Curso</label>
@@ -39,22 +35,23 @@
                     <option value="12">Eletrônica Industrial</option>
                     <option value="13">Gestão Desportiva e de Lazer</option>
                     <option value="14">Processos Gerenciais</option>
-                </select>
-                
-
-                <h3 class="ttAviso">A senha não é obrigatoria para logins efetuados pelo google.</h3>
+                    <option value="17">Téc. Lazer</option>
+                    <option value="18">Téc. Informática</option>
+                    <option value="19">Téc. Eletrônica</option>
+                  </select>
+                <h3 class="ttAviso">Senha com no mínimo 8 caracteres! não é necessário alterar senha para usuários que tenham logado com o Google.</h3>
                 <div class="senhadiv">
                     <ul>
                         <li style="padding-right: 39px;">
                         <label class="nome-campo">Digite uma senha</label>
     
-                        <input class="senha" type="password" name="lname" placeholder="Senha" required>
+                        <input class="senha" type="password" name="lname" [(ngModel)]="senha" placeholder="Senha" required>
                         </li>
     
                         <li>
                         <label class="nome-campo">Confirmar senha</label>
     
-                        <input class="senha" type="password" name="lname" placeholder="Confirmar Senha" required>
+                        <input class="senha" type="password" name="lname" [(ngModel)]="senhaVerificar" placeholder="Confirmar Senha" required>
                     </li>
                     </ul>
                 </div>
